--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
       log in to pierce the veil<br></p>
       <% if user_signed_in? %>
       <p>
-        Signed in as <%= current_user.name %>
+        Signed in as <%= current_user.username %>
       </p>
       <%= button_to "sign out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
       <% else %>
