--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,11 @@
-<%= post.body%>
-<%= post.user_id%>
+
+"<%= post.body%>"
+<br>
+<% if user_signed_in? %>
+~ <em><%= post.user.username%><em>
+<% else %>
+~ <em>anonymous acolyte<em>
+<% end %>
+
+
+<br>
