tidied up views for when signed out/ signed in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
       <p>
         the acolyte is not currently within the wizrding realm.
       </p>
-      <%# <%=# link_to "enter realm", new_user_session_path %> 
+      <%= link_to "enter realm", new_user_session_path %> 
       <% end %>
     
 
