--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,9 +10,9 @@
 "<%= post.body%>"
 <br>
 <% if user_signed_in? %>
-~ <em><%= post.user.username%><em>
+~ <em><%= post.user.username%></em>
 <% else %>
-~ <em>anonymous acolyte<em>
+~ <em>anonymous acolyte</em>
 <% end %>
 <% end %>
 
